# gazelle-installer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MEPIS_Collective_Work_License  PKGBUILD  README.md  app.cpp  autopart.cpp  autopart.h  base.cpp  base.h  blockdev.cpp  blockdev.h  bootman.cpp  bootman.h  build.cmake  build.sh  checkmd5.cpp  checkmd5.h  core.cpp  core.h  crypto.cpp  crypto.h  debian  debs  gazelle-installer_18.12.1.dsc  gazelle-installer_18.12.1.tar.xz  gazelle-installer_18.12.1_amd64.changes  gazelle-installer_18.7.dsc  gazelle-installer_18.7.tar.xz  gazelle-installer_18.7_amd64.changes  gazelle-installer_19.4.2~2.dsc  gazelle-installer_19.4.2~2.tar.xz  gazelle-installer_19.4.2~2_amd64.changes  gazelle-installer_19.4.2~3.dsc  gazelle-installer_19.4.2~3.tar.xz  gazelle-installer_19.4.2~3_amd64.changes  gazelle-installer_19.4.2~4.dsc  gazelle-installer_19.4.2~4.tar.xz  (+62 more)
debian/: antix-installer.postinst.debhelper  antix-installer.substvars  changelog  control  files  install
debian-antiX/: changelog  copyright  install  rules
gauge/: info.txt
icons/: info.txt
man/: minstall.1
polkit/: org.mxlinux.minstall-launcher.policy  org.mxlinux.pkexec.minstall-pkexec.policy
qtui/: CMakeLists.txt  INTEGRATION.md  PROJECT_COMPLETE.md  README.md
qtui/examples/: CMakeLists.txt  README.md  core-extraction-example.cpp  installer-settings.cpp  login-form.cpp  mode-launcher-example.cpp  progress-demo.cpp  wrapper-approach-example.cpp
qtui/include/qtui/: application.h  checkbox.h  combobox.h  dialog.h  groupbox.h  label.h  lineedit.h  messagebox.h  progressbar.h  pushbutton.h  radiobutton.h  tcheckbox.h  tcombobox.h  tdialog.h  tgroupbox.h  tlabel.h  tlineedit.h  tlineedit.h.tmp  tmessagebox.h  tprogressbar.h  tpushbutton.h  tradiobutton.h  tslider.h  widget.h
qtui/src/: application.cpp  checkbox.cpp  combobox.cpp  dialog.cpp  groupbox.cpp  label.cpp  lineedit.cpp  messagebox.cpp  progressbar.cpp  pushbutton.cpp  radiobutton.cpp  tcheckbox.cpp  tcombobox.cpp  tdialog.cpp  tgroupbox.cpp  tlabel.cpp  tlineedit.cpp  tmessagebox.cpp  tprogressbar.cpp  tpushbutton.cpp  tradiobutton.cpp  tslider.cpp  widget.cpp
qtui/tests/: CMakeLists.txt  debug-keys  debug-keys.cpp  run-tests.sh  test-tui.cpp
scripts/: guess-hwclock  live-to-installed  minstall-launcher  minstall-pkexec  oobe  oobe.sh  rc.local.install
service/: oobe.service
src/ui/: CMakeLists.txt  README.md  TESTING.md  context.cpp  context.h  qcheckbox.cpp  qcheckbox.h  qcombobox.cpp  qcombobox.h  qlabel.cpp  qlabel.h  qlineedit.cpp  qlineedit.h  qmessagebox.cpp  qmessagebox.h  qprogressbar.cpp  qprogressbar.h  qpushbutton.cpp  qpushbutton.h  qradiobutton.cpp  qradiobutton.h  qslider.cpp  qslider.h  run-tests.sh  test-wrapper.cpp
translations/: gazelle-installer_af.ts  gazelle-installer_am.qm  gazelle-installer_am.ts  gazelle-installer_ar.ts  gazelle-installer_ast.ts  gazelle-installer_be.ts  gazelle-installer_bg.qm  gazelle-installer_bg.ts  gazelle-installer_bn.ts  gazelle-installer_bs.ts  gazelle-installer_bs_BA.ts  gazelle-installer_ca.qm  gazelle-installer_ca.ts  gazelle-installer_ceb.ts  gazelle-installer_co.ts  gazelle-installer_cs.qm  gazelle-installer_cs.ts  gazelle-installer_cy.ts  gazelle-installer_da.ts  gazelle-installer_de.qm  gazelle-installer_de.ts  gazelle-installer_el.qm  gazelle-installer_el.ts  gazelle-installer_en.ts  gazelle-installer_en_GB.ts  gazelle-installer_en_US.ts  gazelle-installer_eo.ts  gazelle-installer_es.qm  gazelle-installer_es.ts  gazelle-installer_es_ES.ts  gazelle-installer_et.ts  gazelle-installer_eu.ts  gazelle-installer_fa.ts  gazelle-installer_fi.qm  gazelle-installer_fi.ts  gazelle-installer_fi_FI.ts  gazelle-installer_fil.ts  gazelle-installer_fil_PH.ts  gazelle-installer_fr.qm  gazelle-installer_fr.ts  (+118 more)
translations-desktop-file/: Makefile  get_translations  push_original_strings.sh  uploadlist.txt
translations-desktop-file/desktop-in/: minstall.desktop.in
translations-desktop-file/po/: LINGUAS  gazelle-installer-desktop_af.po  gazelle-installer-desktop_am.po  gazelle-installer-desktop_ar.po  gazelle-installer-desktop_ast.po  gazelle-installer-desktop_be.po  gazelle-installer-desktop_bg.po  gazelle-installer-desktop_bn.po  gazelle-installer-desktop_bs.po  gazelle-installer-desktop_bs_BA.po  gazelle-installer-desktop_ca.po  gazelle-installer-desktop_ceb.po  gazelle-installer-desktop_co.po  gazelle-installer-desktop_cs.po  gazelle-installer-desktop_cy.po  gazelle-installer-desktop_da.po  gazelle-installer-desktop_de.po  gazelle-installer-desktop_el.po  gazelle-installer-desktop_en_GB.po  gazelle-installer-desktop_en_US.po  gazelle-installer-desktop_eo.po  gazelle-installer-desktop_es.po  gazelle-installer-desktop_es_ES.po  gazelle-installer-desktop_et.po  gazelle-installer-desktop_eu.po  gazelle-installer-desktop_fa.po  gazelle-installer-desktop_fi.po  gazelle-installer-desktop_fi_FI.po  gazelle-installer-desktop_fil.po  gazelle-installer-desktop_fil_PH.po  gazelle-installer-desktop_fr.po  gazelle-installer-desktop_fr_BE.po  gazelle-installer-desktop_fr_FR.po  gazelle-installer-desktop_fy.po  gazelle-installer-desktop_ga.po  gazelle-installer-desktop_gd.po  gazelle-installer-desktop_gl.po  gazelle-installer-desktop_gl_ES.po  gazelle-installer-desktop_gu.po  gazelle-installer-desktop_ha.po  (+88 more)
translations-desktop-file/pot/: gazelle-installer-desktop.pot
translations/.tx/: config
translations/ts_2022-10-25_201206/: gazelle-installer_af.ts  gazelle-installer_ar.ts  gazelle-installer_bn.ts  gazelle-installer_cs.ts  gazelle-installer_da.ts  gazelle-installer_el.ts  gazelle-installer_en_GB.ts  gazelle-installer_eo.ts  gazelle-installer_es_ES.ts  gazelle-installer_et.ts  gazelle-installer_fa.ts  gazelle-installer_fr_FR.ts  gazelle-installer_gu.ts  gazelle-installer_he.ts  gazelle-installer_he_IL.ts  gazelle-installer_hi.ts  gazelle-installer_hu.ts  gazelle-installer_is.ts  gazelle-installer_ja.ts  gazelle-installer_kk.ts  gazelle-installer_ku.ts  gazelle-installer_mr.ts  gazelle-installer_nb_NO.ts  gazelle-installer_nl.ts  gazelle-installer_pt.ts  (+10 more)
(+9 files in other folders)
